--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "ebytr-task-list-back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/api/server.js",
   "scripts": {
+    "start": "node .",
     "test": "mocha tests",
-    "dev": "nodemon index.js"
+    "dev": "nodemon ."
   },
   "repository": {
     "type": "git",
